--- a/smallBookShelf/client/pages/my/my.wxss
+++ b/smallBookShelf/client/pages/my/my.wxss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .userinfo-avater{
@@ -26,6 +27,8 @@
 
 .tab-item{
   padding: 20rpx 30rpx;
+
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
