--- a/smallBookShelf/client/pages/mybooks/mybooks.wxml
+++ b/smallBookShelf/client/pages/mybooks/mybooks.wxml
@@ -1,14 +1,14 @@
 <view class="loading-container" wx:if="{{showLoading}}">
+
     <view class="dount-container">
         <view class="dount"></view>
     </view>
 </view>
 
 <view class="book-container" wx:else>
-    <block wx:if="{{bookList.lenght >0 }}">
+    <block wx:if="{{bookList.lenght > 0 }}">
         <block wx:for="{{bookList}}" wx:key="index">
-            <view class="book bg-white" hover-class="book-hover" data-id="{{item.bkid}}" date-file="{{item.bkfile}}"
-                catchtap="readBook">
+            <view class="book bg-white" hover-class="book-hover" data-id="{{item.bkid}}" date-file="{{item.bkfile}}" catchtap="readBook">
                 <view class="book-image">
                     <image src="{{item.bkconver}}" mode="scaleToFill" />
                 </view>
@@ -21,8 +21,8 @@
 
     <block wx:else>
         <view class="empty-container">
-            <image class="userinfo-avatar" src="../../images/sad.png" background-size="conver" />
-            <text class="donut-container" >么有买书 (^-^)</text>
+            <image class="userinfo-avatar" src="../../images/sad.png" background-size="cover" />
+            <view class="donut-container" >么有买书 (^-^)</view>
         </view>
     </block>
 </view>
@@ -33,7 +33,8 @@
 
     <text>书籍下载中...</text>
     <view>
-        <progress percent="{{downloadPercent}}" 
+        <progress 
+        percent="{{downloadPercent}}" 
         stroke-width="6" 
         activeColor="#1aad19" 
         backgroundColor="#cdcdcd"
