--- a/smallBookShelf/client/pages/my/my.wxml
+++ b/smallBookShelf/client/pages/my/my.wxml
@@ -1,10 +1,11 @@
 <view class="user-container bg-white">
 
   <view class="userinfo">
-    <block wx:if="{{hasLogin}}">
-      <image src="../../images/login.png" class="userinfo-avater" catchtap="doLogin" background-size="cover" />
+
+    <block wx:if="{{!hasLogin}}">
+      <image src="../../images/login.png" class="userinfo-avatar" catchtap="doLogin" background-size="cover" />
       <!-- <text class="userinfo-nickname">点击登录</text> -->
-      <button class="btn" size="mini" type="primary" bindtap="doLogin" >点击登录</button>
+      <button class="btn" size="mini" type="primary" bindtap="doLogin">点击登录</button>
     </block>
 
     <block wx:else>
@@ -12,26 +13,25 @@
       <text class="userinfo-nickname">{{userInfo.nickName}}</text>
     </block>
   </view>
+</view>
 
-  <view class="table-container bg-white">
-    <view class="tab-item border-bottom">
-      <view>
-        <image src="../../images/luckyCoin.png" mode="aspectFill" class="tab-icon" />
-        <text class="tab-text">积分</text>
-      </view>
-      <text class="tab-text" wx:if="{{!hasLogin}}">{{userInfo.balance}}</text>
-      <text class="tab-text" wx:else></text>
+<view class="table-container bg-white">
+
+  <view class="tab-item border-bottom">
+    <view>
+      <image src="../../images/luckyCoin.png" mode="aspectFill" class="tab-icon" />
+      <text class="tab-text">积分</text>
     </view>
+    <text class="tab-text" wx:if="{{hasLogin}}">{{userInfo.balance}}</text>
+    <text class="tab-text" wx:else></text>
+  </view>
 
-    <view class="tab-item" hover-class="tab-item-hover" catchtap="goMyBooks">
-      <view>
-        <image src="../../images/bought.png" mode="aspectFit" class="tab-icon" />
-        <text class="tab-text">已购</text>
-      </view>
+  <view class="tab-item" hover-class="tab-item-hover" catchtap="goMyBooks">
+    <view>
+      <image src="../../images/bought.png" mode="aspectFit" class="tab-icon" />
+      <text class="tab-text">已购</text>
     </view>
 
     <view class="tab-arrow"></view>
-
   </view>
-
 </view>
