--- a/smallBookShelf/client/pages/mybooks/mybooks.wxss
+++ b/smallBookShelf/client/pages/mybooks/mybooks.wxss
@@ -1,9 +1,19 @@
+
+.loading-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 400rpx;
+}
+
 .book-container {
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-content: space-between;
+
     padding: 50rpx 0;
-    box-sizing: border-box;
 }
 
 .book {
@@ -26,12 +36,14 @@
     transition: all 1 ease 0;
 }
 
+
+/* 这里这样写是什么意思 */
 .book-image {
     width: 100%;
     height: 300rpx;
 }
 
-.book-image>image {
+.book-image > image {
     width: 100%;
     height: 300rpx;
 }
@@ -43,20 +55,22 @@
     margin-top: 10rpx;
 }
 
-.book-name>text{
+.book-name > text{
     font-size: 25rpx;
     color: #1e1e1e;
 }
 
 .empty-container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+
     padding-top: 300rpx;
-    color: #cdcdcd;
+    
     box-sizing: border-box;
-    width: 100rpx;
+    color: #cdcdcd;
+    width: 100%;
 }
 
 .userinfo-avatar{
@@ -73,7 +87,7 @@
     top: 0px;
     left: 0px;
     z-index: 999;
-    background-color: rgba(0, 0, 0, 5);
+    background-color: rgba(0, 0, 0, 0.5);
 
     color: white;
     font-size: 25rpx;
