--- a/smallBookShelf/client/pages/comment/comment.wxml
+++ b/smallBookShelf/client/pages/comment/comment.wxml
@@ -13,7 +13,7 @@
 
   <!-- buttom button -->
   <form report-submit bindsumbit='submitComment'>
-    <view class="fixed-bottom block-full-widht flex-container bg-white">
+    <view class="fixed-bottom block-full-width flex-container bg-white">
       <button class="full-button" type="primary" form-type="submit">提交评论</button>
     </view>
   </form>
