--- a/smallBookShelf/client/pages/comment/comment.wxml
+++ b/smallBookShelf/client/pages/comment/comment.wxml
@@ -12,7 +12,7 @@
   </view>
 
   <!-- buttom button -->
-  <form report-submit bindsumbit='submitComment'>
+  <form report-submit bindsubmit='submitComment'>
     <view class="fixed-bottom block-full-width flex-container bg-white">
       <button class="full-button" type="primary" form-type="submit">提交评论</button>
     </view>
