完成注册页的显示

--- a/nodejs/blog/views/header.ejs
+++ b/nodejs/blog/views/header.ejs
@@ -15,7 +15,7 @@
 <body>
   <%- include('components/nav') %>
   <%- include('components/nav-setting') %>
-  <%- include('componets/notification') %>
+  <%- include('components/notification') %>
 </body>
 
 </html>
